--- a/pages/logo.html
+++ b/pages/logo.html
@@ -29,6 +29,7 @@
 .project_container a{
     padding:20px;
 }
+
 </style>
 </head>
 
@@ -54,8 +55,8 @@
 <h2 class="page_title">Logo Design</h2>
 <div class="project_container">
 <!--PROJECTS-->
-    <a class="trigger_popup_fricc"><img id="car_icon" src="../images/projects/car_meet/car-icon.png"></a>
-    <a class="trigger_popup_fricc_2"><img id="car_icon" src="../images/projects/cards/card-icon.png"></a>
+    <a class="trigger_popup_fricc"><img id="car_icon" src="../images/logo/caffeine-small-icon.png"></a>
+    <a class="trigger_popup_fricc_2"><img id="car_icon" src="../images/logo/mapa-cuisine-small-icon.png"></a>
 <!--POP UP-->
 <!--Car_Meet Pop up-->
 <div class="hover_bkgr_fricc">
@@ -74,8 +75,8 @@
         <span class="helper"></span>
         <div>
             <div id="header_contact">MaPa Cuisine</div>
-            <div id="slide_1"><br><p>COMING SOON</p>
-                <img id="MPC-logo" src="../images/logo/caffeine92-a.jpg" alt="Caffeine92 Logo Design">
+            <div id="slide_1"><br>
+                <img id="MPC-logo" src="../images/logo/MaPaCuisine-2.jpg" alt="Caffeine92 Logo Design">
             
             </div><!--slide_1 ENDS-->
             <div class="popupCloseButton">X</div>
