--- a/pages/projects/golf_course.html
+++ b/pages/projects/golf_course.html
@@ -529,9 +529,19 @@ button.ind_holes,.h3-button{
     margin:2px;
     width: 40%;
 }
+
 .tee_times{
     width: 80%;
     height:auto;
+}
+
+input.search_button_teetime {
+    clear: both;
+    display: block;
+    margin: 1em auto;
+    padding: 5px 15px;
+    background-color: white;
+    border-radius: 7px;
 }
 
 #booking_time{
@@ -561,11 +571,19 @@ button.ind_holes,.h3-button{
 .description2{
     padding:.2em 0;
 }
-
 }/*MOBILE PORTRAIT ENDS*/
 
 /*MOBILE LANDSCAPE*/
 @media (min-width: 320px) and (max-width: 767px) and (orientation: landscape){
+input.search_button_teetime {
+    clear: both;
+    display: block;
+    margin: 1em auto;
+    padding: 5px 15px;
+    background-color: white;
+    border-radius: 7px;
+}
+
 }/*MOBILE LANDSCAPE ENDS*/
 </style>    
 </head>
