Home Page Update
Transition Update on home page upload

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 <div id="bodywrapper">
     <!--GRID CONTAINER-->
     <div class = "gridwrapper">
-        <div class="box header_welcome">welcome</div>
-        <div class="box header_pagename">
+        <div class="box header_welcome tran1a">welcome</div>
+        <div class="box header_pagename tran1b">
             <a href="#"><p>Janine B. Fernandez | <!--<img src="images/logo-2019-mini.png" alt="Janine Fernandez Logo"> | -->Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
@@ -75,12 +75,12 @@
         </div>
         </div><!--gridwrapper ends-->
 
-            <div class = "gridwrapper_content">
+            <div class = "gridwrapper_content tran2">
                 <div class="box mylogo">
                     <p id = "logo_image">
                         <img src="images/logo-2019-mini.png" alt="Janine B. Fernandez Logo">
                     </p> 
-                    </div>
+                </div>
                       
                 <div class = "gridwrapper_info">
                     <div class="box mytitle">designer & developer - Project Manager
@@ -125,7 +125,7 @@
 </div><!--wrapper_body ENDS-->
 
 <!--NAV DROPDOWN-->
-<div class="box nav dropdown">
+<div class="box nav dropdown tran3">
         <button onclick="myFunction()"><i class="fa fa-bars dropbtn"></i></button>
         <div id="myDropdown" class="dropdown-content">
             <!--<li id = "video"><a href="url">Video</a></li>-->
