--- a/index.html
+++ b/index.html
@@ -98,10 +98,9 @@
 <div id="aboutme_des">
         <p id="header_contact">ABOUT ME</p>
         <p id="aboutme_content">
-            Art and the digital world colliding is a field with endless outcomes. 
-            I aim to surround myself in an environment that will foster my interest and growth.
-            As I learn new things, I strive to use my knowledge and skills in creating 
-            something new or build on a solid foundation. 
+            Art has always facinated me. It has endless possibilities, crazy experience during its process, and takes on many different forms.
+            When it comes to art there is no such thing as failing, only outcomes. 
+            There's nothing more satisfying than stepping back and looking at the end result. Please, enjoy!
             <br>
             <!---<br><a href="https://www.dropbox.com/s/2bxco2lkplo126d/Janine_Fernandez_Resume_021119.pdf?dl=0" target="_blank" style="font-weight:bold;">RESUME</a>-->
             <br>
@@ -112,7 +111,7 @@
 <div id="contactme_des">
         <p id="header_contact">CONTACT ME</p>
         <div id="contactme_content">
-            <p>Please contact me directly at: </p>
+            <p>Contact me directly at: </p>
             <p id="my_email">janinebfernandez@gmail.com</p>
             <p>I'd would love to hear from you!</p>
             <p><a href="https://www.linkedin.com/in/janinebfernandez" target="_blank" style="font-weight:bold;">LinkedIn</a></p>
